# .dotfiles

./: .gitignore  AGENTS.md  README.md  gitconfig  initialize.sh  shellenv  shellrc  tmux.conf  wezterm.lua
alacritty/: alacritty.toml  iceberg.toml
bash/: bashrc  shellenv
dottools/: pyproject.toml
dottools/src/dottools/: cli.py  generate_color.py  genpass.py  main.py  svg_combine.py  weather.py
emacs.d/: init.el
jj/: config.toml
nvim/: dein.toml  init.vim  nvim
nvim/colors/: color.perl  color.txt  iceberg_addition.vim
nvim/ftdetect/: lammps.vim  plumed.vim
nvim/lua/: lsp.lua
nvim/script/: basic.vim  func.vim  remap.vim  representation.vim  vimrc.vim
nvim/syntax/: plumed.vim  syntax.vim
pwsh/: Microsoft.PowerShell_profile.ps1
shell/: shellenv  shellrc
vim/: vimplug_plugins.vim
wezterm/: wezterm_linux.lua  wezterm_windows.lua
zsh/: fkota_mgutz.zsh-theme  fkota_zshrc  shellenv  zshenv  zshrc
