[project]
name = "dottools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
]

[project.scripts]
generate_color = "dottools.generate_color:main"
genpass = "dottools.genpass:main"
svg_combine = "dottools.svg_combine:main"
weather = "dottools.weather:main"

